# mAIc-ds-backend

./: README.md  main.py  pyproject.toml  requirements.txt
docker/ollama/: README.md  compose.yml
src/: main.py
src/clients/: ollama.py
src/config/: __init__.py  environment.py
src/enums/: __init__.py  statistics_enum.py
src/models/: __init__.py
src/models/schema/: __init__.py  charts.py  llm_schema.py  message.py  ollama.py
src/routes/: charts.py  upload.py
src/service/: ai_data_science.py  chart_builder.py  file_handler.py
src/service/charts/: abc_chart_builder.py  abc_chart_schema.py
src/service/charts/impl/: ai_chart_reader.py  ai_chart_schema.py  chart_builder.py  chart_data_processor.py
src/service/llm/: abc_llm.py
src/service/llm/impl/: g4f_llm.py
src/service/pipe/: abstract_pipe.py  abstract_pipe_service.py
src/service/pipe/impl/: pandas_pipe.py  pandas_pipe_service.py
src/service/statistics/: abc_statistics.py
src/service/statistics/impl/: statistics.py
src/utils/: start_msg.py
test/: ai_api.py  fetch_chunks.py
test/schema/: llm.py
test/service/: llm_client.py
