[project]
name = "ai-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.2",
    "langchain>=0.2.15",
    "langchain-openai>=0.2.2",
    "langchain-ollama>=0.1.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "fastapi-cli>=0.0.12",
    "sqlmodel>=0.0.25",
    "pandas>=2.3.2",
    "openpyxl>=3.1.5",
]
