[project]
name = "ai-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.2",
    "python-dotenv>=1.0.1",
    "fastapi-cli>=0.0.12",
    "pandas>=2.3.2",
    "openpyxl>=3.1.5",
    "g4f>=0.6.2.9",
]
